Alteração na "appID" e na "appName"

--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,13 +1,13 @@
 {
-  "appId": "io.ionic.starter",
-  "appName": "myMoments",
-  "bundledWebRuntime": false,
-  "npmClient": "npm",
-  "webDir": "www",
-  "plugins": {
-    "SplashScreen": {
-      "launchShowDuration": 0
-    }
-  },
-  "cordova": {}
+    "appId": "com.mymoments.pt",
+    "appName": "My Moments",
+    "bundledWebRuntime": false,
+    "npmClient": "npm",
+    "webDir": "www",
+    "plugins": {
+        "SplashScreen": {
+            "launchShowDuration": 0
+        }
+    },
+    "cordova": {}
 }
