--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,8 @@ npm-debug.log*
 /www
 node_modules/__ngcc_entry_points__.json
 node_modules/__ngcc_entry_points__.json
+node_modules
+node_modules
+/node_modules
+android
+/android
